feat: add basic game events toggle